--- a/packages/expo-splash-screen/android/build.gradle
+++ b/packages/expo-splash-screen/android/build.gradle
@@ -5,13 +5,14 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.5.1'
+    classpath 'com.android.tools.build:gradle:3.5.3'
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
   }
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'maven'
 
 group = 'host.exp.exponent'
@@ -57,7 +58,7 @@ android {
 }
 
 if (new File(rootProject.projectDir.parentFile, 'package.json').exists()) {
-  apply from: project(":unimodules-core").file("../unimodules-core.gradle")
+  apply from: project(':unimodules-core').file('../unimodules-core.gradle')
 } else {
   throw new GradleException(
       '\'unimodules-core.gradle\' was not found in the usual Flutter or React Native dependency locations. ' +
@@ -70,5 +71,7 @@ repositories {
 
 dependencies {
   unimodule 'unimodules-core'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50'
+  implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.50'
 }
