--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -35,6 +35,7 @@ includeUnimodulesProjects(
         'expo-notifications',
         'expo-in-app-purchases',
         'expo-updates',
+        'expo-splash-screen',
 // FLAG_END_REMOVE__UPDATE_EXPOKIT
     ]
 ]
