[splash-screen][Android] Adjust PR according to comments

--- a/packages/expo-splash-screen/android/build.gradle
+++ b/packages/expo-splash-screen/android/build.gradle
@@ -1,22 +1,24 @@
-buildscript {
-  repositories {
-    google()
-    jcenter()
-  }
-
-  dependencies {
-    classpath 'com.android.tools.build:gradle:3.5.3'
-    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
-  }
-}
-
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'maven'
 
 group = 'host.exp.exponent'
 version = '1.0.0'
+
+buildscript {
+  // Simple helper that allows the root project to override versions declared by this library.
+  ext.safeExtGet = { prop, fallback ->
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+  }
+
+  repositories {
+    mavenCentral()
+  }
+
+  dependencies {
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${safeExtGet('kotlinVersion', '1.3.61')}"
+  }
+}
 
 // Upload android library to maven with javadoc and android sources
 configurations {
@@ -44,11 +46,11 @@ uploadArchives {
 }
 
 android {
-  compileSdkVersion 28
+  compileSdkVersion safeExtGet('compileSdkVersion', 28)
 
   defaultConfig {
-    minSdkVersion 21
-    targetSdkVersion 28
+    minSdkVersion safeExtGet('minSdkVersion', 21)
+    targetSdkVersion safeExtGet('targetSdkVersion', 28)
     versionCode 1
     versionName '1.0.0'
   }
@@ -72,6 +74,6 @@ repositories {
 dependencies {
   unimodule 'unimodules-core'
   implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50'
-  implementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.50'
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${safeExtGet('kotlinVersion', '1.3.50')}"
+  implementation "org.jetbrains.kotlin:kotlin-reflect:${safeExtGet('kotlinVersion', '1.3.50')}"
 }
