--- a/apps/bare-expo/package.json
+++ b/apps/bare-expo/package.json
@@ -80,6 +80,7 @@
     "@babel/runtime": "^7.5.5",
     "@react-navigation/web": "2.0.0-alpha.0",
     "expo": "~37.0.0",
+    "expo-image": "~1.0.0-alpha.0",
     "expo-notifications": "~1.0.0",
     "expo-yarn-workspaces": "^1.2.1",
     "native-component-list": "*",
